--- a/AJAX.WEB/Views/Shared/_Layout.cshtml
+++ b/AJAX.WEB/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     @*<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.min.js"></script>*@
-    <script scr="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script srс="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
