--- a/AJAX.WEB/wwwroot/css/site.css
+++ b/AJAX.WEB/wwwroot/css/site.css
@@ -1,6 +1,14 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+#description{
+    margin: 10px;
+    padding: 20px 10px 10px 10px;
+    background-color: #8080804a;
+    border: 1px solid;
+    font-size: 20px;
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
